// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddDiscoveredHostLink /> renders a link to add discovered host 1`] = `
<a>
  <Status
    icon="add-circle-o"
  >
    Add host
  </Status>
</a>
`;

exports[`<GenericError /> renders an error message 1`] = `
<Status
  icon="error-circle-o"
>
  Registration Error
</Status>
`;

exports[`<GenericError /> with details renders an error message with details 1`] = `
<OverlayStatus
  icon="error-circle-o"
  overlay={
    <ErrorOverlay
      errorMessage="some error details"
    />
  }
  text="Registration Error"
/>
`;

exports[`<GenericProgress /> renders a progress message 1`] = `
<Status
  icon="in-progress"
>
  Provisioning
</Status>
`;

exports[`<GenericStatus /> renders a generic status string 1`] = `"Provisioned"`;

exports[`<GenericSuccess /> renders a success message 1`] = `
<Status
  icon="ok"
>
  Provisioned
</Status>
`;

exports[`<ValidationError /> renders a validation error 1`] = `
<OverlayStatus
  icon="error-circle-o"
  overlay={
    <ErrorOverlay
      errorMessage="some validation errors"
    />
  }
  text="Validation Error(s)"
/>
`;
